add changes to styling

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <p class="p-1">Nature - where you want to be - when you just want to: be.</p>
     </div>
     <div class="hero"></div> 
-    
+
+    <header>
     <nav>
         <div class="nav">
             <a href="#index.html">Home</a>
@@ -28,30 +29,32 @@
             <a href="#quiz.html">Take a Quiz</a>
             <a href="#contact">Contact</a>
         </div>
-
-
     </nav>
+    </header>
     
-
     <main>
         <article>
             <div class="intro">
-                <h1>Welcome!</h1>
+                <h1><img class="daisy" src="assets/images/daisy.png">Welcome!<img class="daisy" src="assets/images/daisy.png" alt="An image og a daisy."></h1>
                 <p>
                     This website is promoting time spent in nature, and for good reasons.
-                    On this website, you will find a better understaning to why nature is
+                    Here, you will find a better understaning to why nature is
                     good for you and why you should take advantage of it.
                 </p>
+                <img id="reading" src="assets/images/reading.jpg" alt="An image of a lady reading by a lake">
             </div>
         </article>
 
         <article>
             <div class="psst">
                 <h2>Psst!</h2>
-                <p>Take our quiz to find out what kind of out-door person you really are.</p>
+                <p>Take our quiz to find out what kind of outdoor-person you really are.</p>
             </div>
         </article>
     </main>    
+    <footer class="foot">
+        <p>Copyright 2023</p>
+    </footer>
 </body>
 
 </html>
