add adjustments to the docs

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <header>
     <nav>
         <div class="nav">
-            <a href="#index.html">Home</a>
-            <a href="#the-bliss.html">The bliss of Nature</a>
-            <a href="#quiz.html">Take a Quiz</a>
-            <a href="#contact">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="the-bliss.html">The bliss of Nature</a>
+            <a href="quiz.html">Take a Quiz</a>
+            <a href="contact">Contact</a>
         </div>
     </nav>
     </header>
@@ -35,7 +35,7 @@
     <main>
         <article>
             <div class="intro">
-                <h1><img class="daisy" src="assets/images/daisy.png">Welcome!<img class="daisy" src="assets/images/daisy.png" alt="An image og a daisy."></h1>
+                <h1><img class="daisy" src="assets/images/daisy.png">  Welcome!  <img class="daisy" src="assets/images/daisy.png" alt="An image og a daisy."></h1>
                 <p>
                     This website is promoting time spent in nature, and for good reasons.
                     Here, you will find a better understaning to why nature is
