--- a/the-bliss.html
+++ b/the-bliss.html
@@ -24,10 +24,10 @@
     <header>
         <nav>
             <div class="nav">
-                <a href="#index.html">Home</a>
-                <a href="#the-bliss.html">The bliss of Nature</a>
-                <a href="#quiz.html">Take a Quiz</a>
-                <a href="#contact">Contact</a>
+                <a href="index.html">Home</a>
+                <a href="the-bliss.html">The bliss of Nature</a>
+                <a href="quiz.html">Take a Quiz</a>
+                <a href="contact">Contact</a>
             </div>
         </nav>
     </header>
@@ -35,22 +35,24 @@
     <main>
         <article>
             <div class="intro">
-                <h1><img class="daisy" src="assets/images/daisy.png">The bliss of Nature<img class="daisy"
+                <h1><img class="daisy" src="assets/images/daisy.png">  The bliss of Nature  <img class="daisy"
                         src="assets/images/daisy.png" alt="An image og a daisy."></h1>
                 <p>
                     What do we mean with the bliss of nature? Well, nature provides the feeling of bliss and joy
-                    in so many ways and none of it cost a penny! Time spent in nature is beneficial in many ways, 
-                    not just for feeling the feeling of bliss and joy. Some benefits of spending time outdoors are:
+                    in so many ways and none of them costs a penny! Time spent in nature is beneficial in many ways, 
+                    not just for feeling bliss and joy. Some benefits of spending time outdoors are:
+                    </p>
 
-                    <ol>
-                        <li> You get fresh air filled with oxygen into your lungs</li>
-                        <li>The light from the sun makes your body produce vitamin D and melatonin, both which is crucial for your health.</li>
+                    <ul id="list">
+                        <li> You get fresh air filled with oxygen into your lungs.</li>
+                        <li>The light from the sun makes your body produce vitamin D and melatonin, both which are crucial for your health.</li>
                         <li>Your eyes sees objects far away, which is a good compliment from sitting and staring into a screen all day.</li>
-                        <li>You will hear sounds from nature - birds, the wind, waves etc. This types of sound is calming for the body. </li>
+                        <li>You will hear sounds from nature - birds, the wind, waves etc. This types of sounds are calming for the body. </li>
                         <li>Spending time in nature gives you a feeling of being free.</li>
                         
-                    </ol>
+                    </ul>
 
+                <p>   
                     So with that said, go outside and just be. You do not have to do anything special outside. Just take a walk or sit down on a bench and relax.
                 </p>
                 <img src="assets/images/lake.jpg" alt="An image of an empty bench by a lake.">
