add content to contact page

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="upper">
-        <p class="p-1">Nature - where you want to be - when you just want to: be.</p>
+        <p class="p-1">Nature and fresh air is free. Use it.</p>
     </div>
     <div class="hero"></div>
 
@@ -27,7 +27,7 @@
                 <a href="index.html">Home</a>
                 <a href="the-bliss.html">The bliss of Nature</a>
                 <a href="quiz.html">Take a Quiz</a>
-                <a href="contact">Contact</a>
+                <a href="contact.html">Contact</a>
             </div>
         </nav>
     </header>
@@ -35,12 +35,12 @@
     <main>
         <article>
             <div class="intro">
-                <h1><img class="daisy" src="assets/images/daisy.png"> Welcome! <img class="daisy"
+                <h1><img class="daisy" src="assets/images/daisy.png"> Contact us! <img class="daisy"
                         src="assets/images/daisy.png" alt="An image og a daisy."></h1>
                 <p>
                     Not hooked on nature yet? Let us know why! Use the contact-form below.
                 </p>
-                <img id="reading" src="assets/images/pink.jpg" alt="An image of pink flowers.">
+                <img id="pink" src="assets/images/pink.jpg" alt="An image of pink flowers.">
             </div>
         </article>
 
