add some changes to all pages

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                 <p>
                     Not hooked on nature yet? Let us know why! Use the contact-form below.
                 </p>
-                <img id="pink" src="assets/images/pink.jpg" alt="An image of pink flowers.">
+                <img src="assets/images/man.jpg" alt="An image of a man outdoors using a computer.">
             </div>
         </article>
 
