--- a/the-bliss.html
+++ b/the-bliss.html
@@ -27,7 +27,7 @@
                 <a href="index.html">Home</a>
                 <a href="the-bliss.html">The bliss of Nature</a>
                 <a href="quiz.html">Take a Quiz</a>
-                <a href="contact">Contact</a>
+                <a href="contact.html">Contact</a>
             </div>
         </nav>
     </header>
@@ -35,7 +35,7 @@
     <main>
         <article>
             <div class="intro">
-                <h1><img class="daisy" src="assets/images/daisy.png">  The bliss of Nature  <img class="daisy"
+                <h1><img class="daisy" src="assets/images/daisy.png"> The bliss of Nature <img class="daisy"
                         src="assets/images/daisy.png" alt="An image og a daisy."></h1>
                 <p>
                     What do we mean with the bliss of nature? Well, nature provides the feeling of bliss and joy
@@ -53,7 +53,9 @@
                     </ul>
 
                 <p>   
-                    So with that said, go outside and just be. You do not have to do anything special outside. Just take a walk or sit down on a bench and relax.
+                    So with that said, go outside and just be. You do not have to do anything special outside. Just take a walk or sit down on 
+                    a bench and relax. And do not mind bad weather, the right type of clothes will protect you. After all, weather is part of nature. 
+                    Embrace it!
                 </p>
                 <img src="assets/images/lake.jpg" alt="An image of an empty bench by a lake.">
             </div>
