--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="index.html">Home</a>
             <a href="the-bliss.html">The bliss of Nature</a>
             <a href="quiz.html">Take a Quiz</a>
-            <a href="contact">Contact</a>
+            <a href="contact.html">Contact</a>
         </div>
     </nav>
     </header>
@@ -35,13 +35,13 @@
     <main>
         <article>
             <div class="intro">
-                <h1><img class="daisy" src="assets/images/daisy.png">  Welcome!  <img class="daisy" src="assets/images/daisy.png" alt="An image og a daisy."></h1>
+                <h1><img class="daisy" src="assets/images/daisy.png"> Welcome! <img class="daisy" src="assets/images/daisy.png" alt="An image og a daisy."></h1>
                 <p>
                     This website is promoting time spent in nature, and for good reasons.
                     Here, you will find a better understaning to why nature is
                     good for you and why you should take advantage of it.
                 </p>
-                <img id="reading" src="assets/images/reading.jpg" alt="An image of a lady reading by a lake">
+                <img src="assets/images/reading.jpg" alt="An image of a lady reading by a lake">
             </div>
         </article>
 
