add a youtube video to the bliss page

--- a/the-bliss.html
+++ b/the-bliss.html
@@ -36,7 +36,7 @@
         <article>
             <div class="intro">
                 <h1><img class="daisy" src="assets/images/daisy.png"> The bliss of Nature <img class="daisy"
-                        src="assets/images/daisy.png" alt="An image og a daisy."></h1>
+                        src="assets/images/daisy.png" alt="An image of a daisy."></h1>
                 <p>
                     What do we mean with the bliss of nature? Well, nature provides the feeling of bliss and joy
                     in so many ways and none of them costs a penny! Time spent in nature is beneficial in many ways, 
@@ -57,14 +57,18 @@
                     a bench and relax. And do not mind bad weather, the right type of clothes will protect you. After all, weather is part of nature. 
                     Embrace it!
                 </p>
-                <img src="assets/images/lake.jpg" alt="An image of an empty bench by a lake.">
+                <img id="lake" src="assets/images/lake.jpg" alt="An image of an empty bench by a lake.">
             </div>
         </article>
 
         <article>
             <div class="psst">
-                <h2>Psst!</h2>
-                <p>Take our quiz to find out what kind of outdoor-person you really are.</p>
+                <h2>Get a taste of nature</h2>
+                <p>In this video, you will here sounds of nature while whatching a lovely and relaxing stream of water.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/R_NVBWODk2A" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
         </article>
     </main>
