add media queries

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="upper">
-        <p class="p-1">Nature and fresh air is free. Use it.</p>
+        <p class="p-1">Nature and fresh air does not cost anything. Use it.</p>
     </div>
     <div class="hero"></div>
 
@@ -35,12 +35,12 @@
     <main>
         <article>
             <div class="intro">
-                <h1><img class="daisy" src="assets/images/daisy.png"> Contact us! <img class="daisy"
-                        src="assets/images/daisy.png" alt="An image og a daisy."></h1>
+                <h1><img class="daisy1" src="assets/images/daisy.png"> Contact us! <img class="daisy2"
+                        src="assets/images/daisy.png" alt="An image of a daisy."></h1>
                 <p>
                     Not hooked on nature yet? Let us know why! Use the contact-form below.
                 </p>
-                <img src="assets/images/man.jpg" alt="An image of a man outdoors using a computer.">
+                <img id="man" src="assets/images/man.jpg" alt="An image of a man outdoors using a computer.">
             </div>
         </article>
 
