--- a/quiz.html
+++ b/quiz.html
@@ -35,8 +35,8 @@
     <main>
         <article>
             <div class="intro">
-                <h1><img class="daisy" src="assets/images/daisy.png"> Have fun with a quiz! <img class="daisy"
-                        src="assets/images/daisy.png" alt="An image og a daisy."></h1>
+                <h1><img class="daisy1" src="assets/images/daisy.png"> Have fun with a quiz! <img class="daisy2"
+                        src="assets/images/daisy.png" alt="An image of a daisy."></h1>
                 <p>
                     Here, we have created a quiz for you to help you get to know yourself and find out what type of
                     outdoor-person you really are. Even if you think you are an indoor-person, this quiz might change
@@ -45,7 +45,7 @@
                     Nature has many faces and has something to offer everyone. This
                     quiz is not bulletproof, but can hopefully guide you into a future spent in nature. Enjoy! 
                 </p>
-                <img src="assets/images/women.jpg" alt="An image of three women walking in nature.">
+                <img id="women" src="assets/images/women.jpg" alt="An image of three women walking in nature.">
             </div>
         </article>
     </main>
