--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
     <main>
         <article>
             <div class="intro">
-                <h1><img class="daisy" src="assets/images/daisy.png"> Welcome! <img class="daisy" src="assets/images/daisy.png" alt="An image og a daisy."></h1>
+                <h1><img class="daisy1" src="assets/images/daisy.png"> Welcome! <img class="daisy2" src="assets/images/daisy.png" 
+                    alt="An image of a daisy."></h1>
                 <p>
                     This website is promoting time spent in nature, and for good reasons.
                     Here, you will find a better understaning to why nature is
                     good for you and why you should take advantage of it.
                 </p>
-                <img src="assets/images/reading.jpg" alt="An image of a lady reading by a lake">
+                <img id="reading" src="assets/images/reading.jpg" alt="An image of a lady reading by a lake">
             </div>
         </article>
 
