--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,8 @@
     <footer class="foot">
         <p>Copyright 2023</p>
     </footer>
+    
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
