--- a/the-bliss.html
+++ b/the-bliss.html
@@ -64,7 +64,7 @@
         <article>
             <div class="psst">
                 <h2>Get a taste of nature</h2>
-                <p>In this video, you will here sounds of nature while whatching a lovely and relaxing stream of water.</p>
+                <p>In this video, you will hear sounds of nature while whatching a lovely and relaxing stream of water.</p>
             </div>
             <div class="video">     
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/R_NVBWODk2A" title="YouTube video player"
@@ -77,6 +77,8 @@
     <footer class="foot">
         <p>Copyright 2023</p>
     </footer>
+
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
