add aria-labels to quiz form

--- a/colors.html
+++ b/colors.html
@@ -11,7 +11,7 @@
         content="Nature, forest, flowers, lakes, outdoor-life, hiking, walking outside, being in nature.">
     <meta name="author" content="Milea Tegeus">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Nature Bliss</title>
+    <title>Congrats</title>
 
 </head>
 
@@ -25,7 +25,7 @@
                     <br>
                     <br>
                     Nature has something to offer - no matter what color you chose. For exemple: You can take a walk on the beach and enjoy the blue skye and water.
-                    You can go for a run in the forest and enjoy all the green colors. Or ride your bike during sunset to enjoy the red skye.
+                    You can go for a run in the forest and enjoy all the green colors. Or ride your bike during sunset and enjoy the red skye.
                 </p>
                 <img id="feet" src="assets/images/feet.jpg" alt="An image of a person dipping their feet in water.">
             </div>
