add a contact form to contact page

--- a/contact.html
+++ b/contact.html
@@ -45,9 +45,16 @@
         </article>
 
         <article>
-            <div class="psst">
-                <h2>Psst!</h2>
-                <p>Take our quiz to find out what kind of outdoor-person you really are.</p>
+            <div id="contact-form">
+            
+                <p>Fill in the information required.</p>
+                <form>
+                   <p>Your first and lastname:</p> <input type="text" placeholder="Your name" id="name"><br>
+                <p>Your email-address:</p> <input type="text" placeholder="Your email" id="email"><br>
+                <p>Your message to us:</p> <textarea rows="10" id="msg" placeholder="Write a message" cols="50"></textarea><br>
+                <input type="button" value="Send" id="send">
+
+                </form>
             </div>
         </article>
     </main>
