add changes to all files

--- a/contact.html
+++ b/contact.html
@@ -48,11 +48,11 @@
             <div id="contact-form">
             
                 <p>Fill in the information required.</p>
-                <form>
+                <form action="contact-answer.html" method="GET" onsubmit="return contact_form()">
                    <p>Your first and lastname:</p> <input type="text" placeholder="Your name" id="name"><br>
                 <p>Your email-address:</p> <input type="text" placeholder="Your email" id="email"><br>
                 <p>Your message to us:</p> <textarea rows="10" id="msg" placeholder="Write a message" cols="50"></textarea><br>
-                <input type="button" value="Send" id="send">
+                <input type="submit" value="Send" id="send">
 
                 </form>
             </div>
