--- a/quiz-answer.html
+++ b/quiz-answer.html
@@ -26,15 +26,13 @@
                     <br>
                     Nature has something to offer - no matter what color you chose. For exemple: You can take a walk on the beach and enjoy the blue skye and water.
                     You can go for a run in the forest and enjoy all the green colors. Or ride your bike during sunset and enjoy the red skye.
+                    <br> Enjoy!
                 </p>
                 <img id="feet" src="assets/images/feet.jpg" alt="An image of a person dipping their feet in water.">
             </div>
         </article>
 
     </main>    
-    <footer class="foot">
-        <p>Copyright 2023</p>
-    </footer>
     
     <script src="assets/js/script.js"></script>
 </body>
