--- a/the-bliss.html
+++ b/the-bliss.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body>
+<body onload="quiz_pop()">
     <div class="upper">
         <p class="p-1">Nature-time - when nothing else matters.</p>
     </div>
