--- a/quiz.html
+++ b/quiz.html
@@ -54,12 +54,12 @@
           <h1>Quiz-time!</h1>
             <p>Just answer this simple question: Which color is most appealing to you?</p>
 
-            <form action="colors.html" method="get" onsubmit="return is_checked()">
+            <form action="quiz-answer.html" method="GET" onsubmit="return is_checked()">
              <p>Blue</p> <input type="radio" aria-label="A checkbox for the color blue." name="color" value="blue" id="color-blue">
              <p>Green</p> <input type="radio" aria-label="A checkbox for the color green." name="color" value="green" id="color-green">
              <p>Red</p> <input type="radio" aria-label="A checkbox for the color red." name="color" value="red" id="color-red">
              <br>
-             <input id="submit" aria-label="A clickable submit button." type="submit" value="submit">
+             <input id="submit" aria-label="A clickable submit button." type="submit" value="Submit">
              </form>
 
         </div> 
