add aria labels to forms

--- a/contact.html
+++ b/contact.html
@@ -49,10 +49,10 @@
             
                 <p>Fill in the information required.</p>
                 <form action="contact-answer.html" method="GET" onsubmit="return contact_form()">
-                   <p>Your first and lastname:</p> <input type="text" placeholder="Your name" id="name"><br>
-                <p>Your email-address:</p> <input type="text" placeholder="Your email" id="email"><br>
-                <p>Your message to us:</p> <textarea rows="10" id="msg" placeholder="Write a message" cols="50"></textarea><br>
-                <input type="submit" value="Send" id="send">
+                   <p>Your first and lastname:</p> <input type="text" aria-label="A blank space to write your name." placeholder="Your name" id="name"><br>
+                <p>Your email-address:</p> <input type="text" aria-label="A blank space to write your email." placeholder="Your email" id="email"><br>
+                <p>Your message to us:</p> <textarea rows="10" id="msg" aria-label="A blank space to write your message." placeholder="Write a message" cols="50"></textarea><br>
+                <input type="submit" value="Send" id="send" aria-label="A clickable submit button.">
 
                 </form>
             </div>
