--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </article>
 
         <article>
-            <div class="psst">
+            <div class="div2">
                 <h2>Psst!</h2>
                 <p>Take our quiz to find out what kind of outdoor-person you really are.</p>
             </div>
