--- a/quiz.html
+++ b/quiz.html
@@ -52,15 +52,21 @@
         <div id="quiz">
 
           <h1>Quiz-time!</h1>
-            <p>Just answer this simple question: Which color is most appealing to you?</p>
+            <p>Please answer this simple question:
+                <br>
+                <br>
+                Which color is most appealing to you?</p>
+                <br>
 
             <form action="quiz-answer.html" method="GET" onsubmit="return is_checked()">
              <p>Blue</p> <input type="radio" aria-label="A checkbox for the color blue." name="color" value="blue" id="color-blue">
              <p>Green</p> <input type="radio" aria-label="A checkbox for the color green." name="color" value="green" id="color-green">
              <p>Red</p> <input type="radio" aria-label="A checkbox for the color red." name="color" value="red" id="color-red">
              <br>
-             <input id="submit" aria-label="A clickable submit button." type="submit" value="Submit">
+            <input id="submit" aria-label="A clickable submit button." type="submit" value="Submit">
              </form>
+             <br>
+            </form>
 
         </div> 
 
