--- a/the-bliss.html
+++ b/the-bliss.html
@@ -38,8 +38,9 @@
                 <h1><img class="daisy1" src="assets/images/daisy.png"> The bliss of Nature <img class="daisy2"
                         src="assets/images/daisy.png" alt="An image of a daisy."></h1>
                 <p>
-                    What do we mean with the bliss of nature? Well, nature provides the feeling of bliss and joy
-                    in so many ways and none of them costs a penny! Time spent in nature is beneficial in many ways, 
+                    What do we mean with "the bliss of nature"? Well, nature provides the feeling of bliss and joy
+                    in so many ways and none of them costs a penny! Watch the video on the bottom of this page to 
+                    get a hint of what we mean. Time spent in nature is beneficial in many ways, 
                     not just for feeling bliss and joy. Some benefits of spending time outdoors are:
                     </p>
 
@@ -62,7 +63,7 @@
         </article>
 
         <article>
-            <div class="psst">
+            <div class="div2">
                 <h2>Get a taste of nature</h2>
                 <p>In this video, you will hear sounds of nature while whatching a lovely and relaxing stream of water.</p>
             </div>
