add changes according to html validator

--- a/contact-answer.html
+++ b/contact-answer.html
@@ -19,7 +19,7 @@
 
 
     <div class="intro">
-        <h1><img class="daisy1" src="assets/images/daisy.png"> Thanks for your message! <img class="daisy2"
+        <h1><img class="daisy1" alt="An image of a daisy." src="assets/images/daisy.png"> Thanks for your message! <img class="daisy2"
             src="assets/images/daisy.png" alt="An image of a daisy."></h1>
     </div>
                   
