--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
         <article>
             <div class="intro">
-                <h1><img class="daisy1" src="assets/images/daisy.png"> Welcome! <img class="daisy2" src="assets/images/daisy.png" 
+                <h1><img class="daisy1" alt="An image of a daisy." src="assets/images/daisy.png"> Welcome! <img class="daisy2" src="assets/images/daisy.png" 
                     alt="An image of a daisy."></h1>
                 <p>
                     This website is promoting time spent in nature, and for good reasons.
