--- a/the-bliss.html
+++ b/the-bliss.html
@@ -35,7 +35,7 @@
     <main>
         <article>
             <div class="intro">
-                <h1><img class="daisy1" src="assets/images/daisy.png"> The bliss of Nature <img class="daisy2"
+                <h1><img class="daisy1" src="assets/images/daisy.png" alt="An image of a daisy."> The bliss of Nature <img class="daisy2"
                         src="assets/images/daisy.png" alt="An image of a daisy."></h1>
                 <p>
                     What do we mean with "the bliss of nature"? Well, nature provides the feeling of bliss and joy
@@ -69,7 +69,6 @@
             </div>
             <div class="video">     
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/R_NVBWODk2A" title="YouTube video player"
-                    frameborder="0"
                     allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
             </div>
