--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
     <main>
         <article>
             <div class="intro">
-                <h1><img class="daisy1" src="assets/images/daisy.png"> Contact us! <img class="daisy2"
+                <h1><img class="daisy1" alt="An image of a daisy." src="assets/images/daisy.png"> Contact us! <img class="daisy2"
                         src="assets/images/daisy.png" alt="An image of a daisy."></h1>
                 <p>
                     Not hooked on nature yet? Let us know why! Use the contact-form below.
@@ -47,7 +47,7 @@
         <article>
             <div id="contact-form">
             
-                <p>Fill in the information required.</p>
+                <h2>Fill in the information required.</h2>
                 <form action="contact-answer.html" method="GET" onsubmit="return contact_form()">
                    <p>Your first and lastname:</p> <input type="text" aria-label="A blank space to write your name." placeholder="Your name" id="name"><br>
                 <p>Your email-address:</p> <input type="text" aria-label="A blank space to write your email." placeholder="Your email" id="email"><br>
