--- a/quiz.html
+++ b/quiz.html
@@ -35,7 +35,7 @@
     <main>
         <article>
             <div class="intro">
-                <h1><img class="daisy1" src="assets/images/daisy.png"> Have fun with a quiz! <img class="daisy2"
+                <h1><img class="daisy1" src="assets/images/daisy.png" alt="An image of a daisy."> Have fun with a quiz! <img class="daisy2"
                         src="assets/images/daisy.png" alt="An image of a daisy."></h1>
                 <p>
                     Here, we have created a very simple quiz for you to help you get to know yourself and find out what type of
@@ -51,7 +51,7 @@
 
         <div id="quiz">
 
-          <h1>Quiz-time!</h1>
+          <h2>Quiz-time!</h2>
             <p>Please answer this simple question:
                 <br>
                 <br>
@@ -65,8 +65,6 @@
              <br>
             <input id="submit" aria-label="A clickable submit button." type="submit" value="Submit">
              </form>
-             <br>
-            </form>
 
         </div> 
 
