add spelling checks to all docs

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     alt="An image of a daisy."></h1>
                 <p>
                     This website is promoting time spent in nature, and for good reasons.
-                    Here, you will find a better understaning to why nature is
+                    Here, you will find a better understanding to why nature is
                     good for you and why you should take advantage of it.
                 </p>
                 <img id="reading" src="assets/images/reading.jpg" alt="An image of a lady reading by a lake">
