--- a/quiz-answer.html
+++ b/quiz-answer.html
@@ -24,8 +24,8 @@
                 <p> Your answer has been submitted. 
                     <br>
                     <br>
-                    Nature has something to offer - no matter what color you chose. For exemple: You can take a walk on the beach and enjoy the blue skye and water.
-                    You can go for a run in the forest and enjoy all the green colors. Or ride your bike during sunset and enjoy the red skye.
+                    Nature has something to offer - no matter what color you chose. For example: You can take a walk on the beach and enjoy the blue sky and water.
+                    You can go for a run in the forest and enjoy all the green colors. Or ride your bike during sunset and enjoy the red sky.
                     <br> Enjoy!
                 </p>
                 <img id="feet" src="assets/images/feet.jpg" alt="An image of a person dipping their feet in water.">
