--- a/the-bliss.html
+++ b/the-bliss.html
@@ -46,9 +46,9 @@
 
                     <ul id="list">
                         <li> You get fresh air filled with oxygen into your lungs.</li>
-                        <li>The light from the sun makes your body produce vitamin D and melatonin, both which are crucial for your health.</li>
+                        <li>The light from the sun makes your body produce vitamin D and melatonin, both of which are crucial for your health.</li>
                         <li>Your eyes sees objects far away, which is a good compliment from sitting and staring into a screen all day.</li>
-                        <li>You will hear sounds from nature - birds, the wind, waves etc. This types of sounds are calming for the body. </li>
+                        <li>You will hear sounds from nature - birds, the wind, waves etc. These types of sounds are calming for the body. </li>
                         <li>Spending time in nature gives you a feeling of being free.</li>
                         
                     </ul>
@@ -65,12 +65,12 @@
         <article>
             <div class="div2">
                 <h2>Get a taste of nature</h2>
-                <p>In this video, you will hear sounds of nature while whatching a lovely and relaxing stream of water.</p>
+                <p>In this video, you will hear sounds of nature while watching a lovely and relaxing stream of water.</p>
             </div>
             <div class="video">     
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/R_NVBWODk2A" title="YouTube video player"
-                    allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
+                 aria-label="A Youtube video with a stream of water and birds singing in a forest." allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                 allowfullscreen></iframe>
             </div>
         </article>
     </main>
