--- a/the-bliss.html
+++ b/the-bliss.html
@@ -12,15 +12,14 @@
     <meta name="author" content="Milea Tegeus">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Nature Bliss</title>
-
 </head>
 
 <body onload="quiz_pop()">
     <div class="upper">
         <p class="p-1">Nature-time - when nothing else matters.</p>
     </div>
-    <div class="hero"></div>
 
+    <div class="hero"></div>
     <header>
         <nav>
             <div class="nav">
@@ -49,8 +48,7 @@
                         <li>The light from the sun makes your body produce vitamin D and melatonin, both of which are crucial for your health.</li>
                         <li>Your eyes sees objects far away, which is a good compliment from sitting and staring into a screen all day.</li>
                         <li>You will hear sounds from nature - birds, the wind, waves etc. These types of sounds are calming for the body. </li>
-                        <li>Spending time in nature gives you a feeling of being free.</li>
-                        
+                        <li>Spending time in nature gives you a feeling of being free.</li>   
                     </ul>
 
                 <p>   
@@ -67,6 +65,8 @@
                 <h2>Get a taste of nature</h2>
                 <p>In this video, you will hear sounds of nature while watching a lovely and relaxing stream of water.</p>
             </div>
+
+            <!--To make the video responsive, I used a tutorial. Read more in README-->
             <div class="video">     
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/R_NVBWODk2A" title="YouTube video player"
                  aria-label="A Youtube video with a stream of water and birds singing in a forest." allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -74,6 +74,7 @@
             </div>
         </article>
     </main>
+
     <footer class="foot">
         <p>Copyright 2023</p>
     </footer>
