--- a/the-bliss.html
+++ b/the-bliss.html
@@ -69,7 +69,8 @@
             <!--To make the video responsive, I used a tutorial. Read more in README-->
             <div class="video">     
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/R_NVBWODk2A" title="YouTube video player"
-                 aria-label="A Youtube video with a stream of water and birds singing in a forest." allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                 aria-label="A Youtube video with a stream of water and birds singing in a forest." 
+                 allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                  allowfullscreen></iframe>
             </div>
         </article>
