--- a/the-bliss.html
+++ b/the-bliss.html
@@ -14,7 +14,7 @@
     <title>Nature Bliss</title>
 </head>
 
-<body onload="quiz_pop()">
+<body onload="game_pop()">
     <div class="upper">
         <p class="p-1">Nature-time - when nothing else matters.</p>
     </div>
@@ -25,7 +25,7 @@
             <div class="nav">
                 <a href="index.html">Home</a>
                 <a href="the-bliss.html">The bliss of Nature</a>
-                <a href="quiz.html">Take a Quiz</a>
+                <a href="game.html">Play a Game</a>
                 <a href="contact.html">Contact</a>
             </div>
         </nav>
