--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="nav">
             <a href="index.html">Home</a>
             <a href="the-bliss.html">The bliss of Nature</a>
-            <a href="quiz.html">Take a Quiz</a>
+            <a href="game.html">Play a Game</a>
             <a href="contact.html">Contact</a>
         </div>
       </nav>
