--- a/question-answer-no.html
+++ b/question-answer-no.html
@@ -11,26 +11,24 @@
         content="Nature, forest, flowers, lakes, outdoor-life, hiking, walking outside, being in nature.">
     <meta name="author" content="Milea Tegeus">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Congrats</title>
+    <title>Sad news</title>
 </head>
 
 <body>
     <main>
         <article>
             <div class="intro">
-                <h1><img class="daisy1" alt="An image of a daisy." src="assets/images/daisy.png"> Congrats! <img class="daisy2" src="assets/images/daisy.png" 
+                <h1><img class="daisy1" alt="An image of a daisy." src="assets/images/daisy.png"> Sorry to hear that... <img class="daisy2" src="assets/images/daisy.png" 
                     alt="An image of a daisy."></h1>
-                <p> Your answer has been submitted. 
-                    <br>
-                    <br>
-                    Nature has something to offer - no matter what color you chose. For example: You can take a walk on the beach and enjoy the blue sky and water.
-                    You can go for a run in the forest and enjoy all the green colors. Or ride your bike during sunset and enjoy the red sky.
-                    <br> Enjoy!
+                <p>However, nature will always be there for you when you are ready for it!
                 </p>
                 <img id="feet" src="assets/images/feet.jpg" alt="An image of a person dipping their feet in water.">
             </div>
         </article>
-    </main>    
+    </main>  
+      
+    <footer class="foot">
+        <p>Copyright 2023</p>
     
     <script src="assets/js/script.js"></script>
 </body>
